--- a/index.html
+++ b/index.html
@@ -424,24 +424,15 @@
     
 
     <!-- FireWatch AI -->
-      <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
-  <!-- Fire Lottie Animation -->
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-  <lottie-player
-    src="https://assets2.lottiefiles.com/datafiles/HOx9SNmpiiyHzXx/data.json"
-    background="transparent"
-    speed="1"
-    style="width:100%; height:200px;"
-    loop
-    autoplay
-    aria-label="Fire animation"
-  ></lottie-player>
-
+     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
+  <img src="fire%20sheild.jpg" alt="FireWatch Logo" class="w-full h-48 object-contain" />
   <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🔥 FireWatch AI</h3>
   <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
-    Real-time fire detection system using YOLOv8 and OpenCV to detect and annotate fire in live video feeds.
+    Real-time fire detection system using YOLOv8 and OpenCV to detect and highlight fire in video streams.
   </p>
-  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, YOLOv8, OpenCV, Streamlit</p>
+  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">
+    Tech: Python, YOLOv8, OpenCV, Streamlit
+  </p>
   <div class="flex gap-4">
     <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium">
       <i class="fab fa-github fa-lg"></i> GitHub
@@ -499,23 +490,16 @@
     </div>
 
     <!-- Cancer Prediction Web App -->
-         <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
-  <!-- Cancer Prediction Lottie Animation -->
-  <lottie-player
-    src="https://assets9.lottiefiles.com/packages/lf20_3os8mo.json"
-    background="transparent"
-    speed="1"
-    style="width:100%; height:200px;"
-    loop
-    autoplay
-    aria-label="Medical diagnosis animation"
-  ></lottie-player>
-
-  <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🧬 Cancer Prediction Web App</h3>
+     
+     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
+  <img src="brainchart.png" alt="Cancer Prediction Logo" class="w-full h-48 object-contain" />
+  <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">🚀 Cancer Prediction Web App</h3>
   <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
-    A Streamlit tool using a Random Forest classifier to predict tumor type, with an intuitive UI for medical decision support.
+    A Streamlit tool using a Random Forest classifier to predict tumor types, with an intuitive UI for medical decision support.
   </p>
-  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Streamlit, Machine Learning</p>
+  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">
+    Tech: Python, Streamlit, Machine Learning
+  </p>
   <div class="flex gap-4">
     <a href="https://github.com/Azad-Bhasme/Cancer-predicition-.git" target="_blank" class="text-blue-600 hover:underline font-medium">
       <i class="fab fa-github fa-lg"></i> GitHub
@@ -525,7 +509,6 @@
     </a>
   </div>
 </div>
-
     <!-- Dashboard Project -->
     <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer">
       <lottie-player
