--- a/index.html
+++ b/index.html
@@ -522,9 +522,9 @@
       ></lottie-player>
       <h3 class="text-xl font-semibold text-blue-600 mt-4 mb-2">📊 Sales Dashboard</h3>
       <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
-        A dashboard built using Python and Tableau to visualize and explore sales trends interactively.
+        A dashboard built using Python,DAX and Power BI to visualize and explore sales trends interactively.
       </p>
-      <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Tableau, Data Visualization</p>
+      <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python,DAX, Power BI, Data Visualization</p>
       <div class="flex gap-4">
         <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium"><i class="fab fa-github fa-lg"></i> GitHub</a>
       </div>
