--- a/index.html
+++ b/index.html
@@ -206,7 +206,14 @@
   <canvas id="smallPieChartContainer" aria-label="Animated small pie chart"></canvas>
 
   <!-- Dark/Light Toggle -->
-  
+  <button
+  aria-label="Toggle Dark/Light Mode"
+  class="fixed top-4 right-4 z-50 bg-gray-200 dark:bg-gray-700 p-2 rounded-full shadow-md hover:bg-gray-300 dark:hover:bg-gray-600 transition focus:outline-none focus:ring-2 focus:ring-blue-500"
+  id="theme-toggle"
+>
+  <i class="fas fa-moon text-gray-800 dark:text-gray-200" id="theme-icon"></i>
+</button>
+
     <!-- Hero Section -->
     <section
       class="relative flex flex-col items-center justify-center gap-2 md:gap-4 text-center"
