--- a/index.html
+++ b/index.html
@@ -523,6 +523,9 @@
       <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python,DAX, Power BI, Data Visualization</p>
       <div class="flex gap-4">
         <a href="https://github.com/Azad-Bhasme" target="_blank" class="text-blue-600 hover:underline font-medium"><i class="fab fa-github fa-lg"></i> GitHub</a>
+        <a href=" https://github.com/Azad-Bhasme/PowerBI-Sales-Dashboard.git  " target="_blank" class="text-blue-600 hover:underline font-medium">
+      🚀 Demo
+    </a>
       </div>
     </div>
 
