--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         >
         <a
           class="px-6 py-3 border border-blue-600 text-blue-600 hover:bg-blue-600 hover:text-white rounded-md font-semibold shadow-md transition focus:outline-none focus:ring-2 focus:ring-blue-500 flex items-center space-x-2"
-          href="https://www.linkedin.com/in/azadbhasme"
+          href="linkedin.com/in/azad-bhasme-965849361"
           rel="noopener"
           target="_blank"
         >
