--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         <a href="https://github.com/Azad-Bhasme/SnapDocsAI.git" target="_blank" class="text-blue-600 hover:underline font-medium">
           <i class="fab fa-github fa-lg"></i> GitHub
         </a>
-        <a href="https://snapdocs-ai.onrender.com" target="_blank" class="text-blue-600 hover:underline font-medium">
+        <a href="https://snapdocsaio.onrender.com" target="_blank" class="text-blue-600 hover:underline font-medium">
           🚀 Demo
         </a>
       </div>
@@ -807,5 +807,6 @@
   </script>
 </body>
 </html>
+
 
 
